welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: value len is not a member of Array[Int]
  while (nums(z)!= lookingFor && z<=nums.len){
                                         ^